{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 100,
  "lineage": "834e6c5f-8bdf-4882-02ff-c6f3d0695a81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "autobox-splunk01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "autobox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507065434701:internet-gateway/igw-0add2b757d77f1672",
            "id": "igw-0add2b757d77f1672",
            "owner_id": "507065434701",
            "vpc_id": "vpc-040bc498998e6777b"
          },
          "dependencies": [
            "aws_vpc.autobox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0add2b757d77f1672",
            "id": "r-rtb-02acaff76e08935f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02acaff76e08935f7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.autobox",
            "aws_vpc.autobox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autobox-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507065434701:security-group/sg-078287c5034b7346e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078287c5034b7346e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9997,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9997
              }
            ],
            "name": "Autobox Security Group",
            "name_prefix": "",
            "owner_id": "507065434701",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-040bc498998e6777b"
          },
          "dependencies": [
            "aws_vpc.autobox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "autobox-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507065434701:subnet/subnet-0981c898e5cc97652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-0981c898e5cc97652",
            "map_public_ip_on_launch": true,
            "owner_id": "507065434701",
            "tags": {
              "Name": "Autobox 01"
            },
            "vpc_id": "vpc-040bc498998e6777b"
          },
          "dependencies": [
            "aws_vpc.autobox"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "autobox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507065434701:vpc/vpc-040bc498998e6777b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-002cafdf442d3343b",
            "default_route_table_id": "rtb-02acaff76e08935f7",
            "default_security_group_id": "sg-0d4306fb35903dc1a",
            "dhcp_options_id": "dopt-68754213",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-040bc498998e6777b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02acaff76e08935f7",
            "owner_id": "507065434701"
          }
        }
      ]
    }
  ]
}